versao 0.1.5 Diminuindo a versao do php necessario

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "molecular/phpibs",
     "description": "HTTP interface between servers",
     "require": {
-        "guzzlehttp/guzzle": "^6.2"
+        "guzzlehttp/guzzle": "5.3.*"
     },
     "autoload": {
         "psr-4": {
